<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_background"
        android:orientation="vertical"
        android:padding="16dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/Text_YS_Medium_22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/app_name"
                android:textColor="@color/white" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/searchButton"
                style="@style/Button_WhiteRounded"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/search"
                app:icon="@drawable/ic_search_24"
                app:iconTint="@color/black" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/mediaButton"
                style="@style/Button_WhiteRounded"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/media_library"
                app:icon="@drawable/ic_media_24"
                app:iconTint="@color/black" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="28dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/settingsButton"
                style="@style/Button_WhiteRounded"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/settings"
                app:icon="@drawable/ic_settings_24"
                app:iconTint="@color/black" />
        </FrameLayout>
    </LinearLayout>
</LinearLayout>