<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/second_background"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".presentation.playlist.CreatePlaylistFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/second_background"
        app:navigationIcon="@drawable/ic_arrow_back_24"
        app:navigationIconTint="@color/main_text_color"
        app:title="@string/create_playlist_title"
        app:titleTextAppearance="@style/Text_YS_Medium_22"
        app:titleTextColor="@color/main_text_color" />

    <ScrollView
        android:id="@+id/scroll_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:padding="16dp">

            <ImageView
                android:id="@+id/iv_cover"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="26dp"
                android:background="@drawable/playlist_cover_dashed_background"
                android:contentDescription="@string/playlist_cover"
                android:padding="16dp"
                android:scaleType="center"
                android:src="@drawable/placeholder_photo_100"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:boxBackgroundMode="outline"
                app:boxBackgroundColor="@color/second_background"
                app:boxCornerRadiusBottomEnd="4dp"
                app:boxCornerRadiusBottomStart="4dp"
                app:boxCornerRadiusTopEnd="4dp"
                app:boxCornerRadiusTopStart="4dp"
                app:boxStrokeColor="@color/create_playlist_text_edit_color"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="1dp"
                android:hint="@string/playlist_name_hint"
                app:hintEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_cover">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:importantForAutofill="no"
                    android:inputType="textCapSentences|textNoSuggestions"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:paddingStart="16dp"
                    android:paddingTop="18dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="19dp"
                    android:textSize="@dimen/text_size_16"
                    android:textColor="@color/main_text_color"
                    android:textCursorDrawable="@drawable/custom_cursor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:boxBackgroundMode="outline"
                app:boxBackgroundColor="@color/second_background"
                app:boxCornerRadiusBottomEnd="4dp"
                app:boxCornerRadiusBottomStart="4dp"
                app:boxCornerRadiusTopEnd="4dp"
                app:boxCornerRadiusTopStart="4dp"
                app:boxStrokeColor="@color/create_playlist_text_edit_color"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="1dp"
                android:hint="@string/playlist_description_hint"
                app:hintEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    app:boxStrokeColor="@color/create_playlist_text_edit_color"
                    android:gravity="top"
                    android:importantForAutofill="no"
                    android:inputType="textCapSentences|textNoSuggestions"
                    android:imeOptions="actionDone"
                    android:minLines="1"
                    android:paddingStart="16dp"
                    android:paddingTop="18dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="19dp"
                    android:textSize="@dimen/text_size_16"
                    android:textColor="@color/main_text_color"
                    android:textCursorDrawable="@drawable/custom_cursor" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_create"
        style="@style/Button_Create_Playlist_Style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rounded_button_8_create_playlist"
        android:enabled="false"
        android:text="@string/create_playlist_button"
        android:textAllCaps="false" />

</LinearLayout>
